# LaserTurretProject

./: .gitignore  README.md  testCode.py  testCode2.py
Gun/: init.sh  pyproject.toml  readme.md  test.py  tests.py  upload.sh
Gun/micropython_ir/: RECEIVER.md
Gun/micropython_ir/ir_rx/: sony.py  test.py
Gun/micropython_ir/ir_tx/: __init__.py
Gun/src/: .main.py.swp  boot.py  gun.py  ir_com.py  ir_demo.py  ir_main.py  lcd_demo.py  main.py  segment_demo.py  teamled_demo.py  threading_demo.py  turretPeripherals.py
Gun/src/ir_rx/: nec.py  print_error.py
Gun/src/ir_tx/: __init__.py
Gun/src/lcd/: i2c_lcd.py
LZControllCenter/: __main__.py  readme.md  requirements.txt
LZControllCenter/data/: team_color.py  values.py
LZControllCenter/messaging/: output_to_turret.py  serial_listener.py  serial_messenger.py  sound_effects.py  test_messenger.py
Laptop/: __main__.py  pyproject.toml  requirements.txt
Laptop/communication/: input_listener.py
Laptop/data/: team_color.py  values.py
Laptop/exceptions/: InvalidDirectionException.py
Laptop/messaging/: __serial_listener.py  output_to_turret.py  serial_listener.py  serial_messenger.py  sound_effects.py  test_messenger.py
Laptop/motion_sensing/: ir_listener.py  motion_sensor.py
Laptop/targeting/: set_color_target.py  targeter.py  tracker.py
Laptop/testing/: test_output_to_turret.py  test_targeter_methods.py  test_turret.py
Turret/: arduinoControl.old.ino  attinyCode.ino  main.py  motiondetection.py  readme.md  tiltPwm.py
models/: StepperMotorModel.emx  turret_UPPAAL_model.xml
(+24 files in other folders)
